<resources>
    <string name="app_name">Orders</string>
    <string name="type_product_name">Type product name</string>
    <string name="type_price_of_product">Type price of product</string>
    <string name="save_product">Save product</string>
    <string name="type_stock_product">Type stock product</string>
    <string name="type_dept_name">Type Dept name</string>
    <string name="type_from_date">Type from date</string>
    <string name="type_to_date">Type to date</string>
    <string name="save_dept">Save dept</string>
    <string name="dept_from_data">Dept from data</string>
    <string name="dpt_name">Dpt name</string>
    <string name="dept_todata">Dept ToData</string>
</resources>
